--- a/project_GAN_colab.ipynb
+++ b/project_GAN_colab.ipynb
@@ -824,7 +824,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|█████████████████████████████▎                                                 | 427/1149 [14:03<28:18,  2.35s/it]"
+      " 57%|████████████████████████████████████████████▉                                  | 654/1149 [21:37<17:10,  2.08s/it]"
      ]
     }
    ],
@@ -1098,4 +1098,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_mino
+ "nbformat_minor": 1
+}
