--- a/project_GAN_colab.ipynb
+++ b/project_GAN_colab.ipynb
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -967,10 +967,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1bb01d3d278>"
+       "<matplotlib.legend.Legend at 0x1bb0033afd0>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1013,7 +1013,6 @@
     "import pandas as pd\n",
     "\n",
     "tmp_scores = pd.DataFrame(list(zip(real_scores, fake_scores, losses_g,  losses_d)), columns=['real_scores', 'fake_scores', 'losses_g', 'losses_d'])\n",
-    "\n",
     "tmp_scores.to_csv('export_scores_losses.csv', index = False, header=True)"
    ]
   },
