--- a/project_GAN_colab.ipynb
+++ b/project_GAN_colab.ipynb
@@ -35,20 +35,11 @@
     "\n",
     "if use_colab:\n",
     "    from google.colab import drive\n",
-    "    drive.mount('/content/drive')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "id": "4lN0_z2Q1qUg"
-   },
-   "outputs": [],
-   "source": [
-    "data_unzipped = True\n",
-    "if not data_unzipped:\n",
-    "    !unzip -uq \"/content/drive/My Drive/OuluProject/data.zip\" -d \"/content/drive/My Drive/OuluProject/data\n"
+    "    drive.mount(\"/content/drive\", force_remount=True)\n",
+    "\n",
+    "    # Check whether the specified path exists or not\n",
+    "    if os.path.exists(\"/content/data\") == False :\n",
+    "        !unzip -uq \"/content/drive/My Drive/OuluProject/data.zip\" -d \"/content/data\""
    ]
   },
   {
@@ -94,7 +85,6 @@
     "    ax.set_xticks([]); ax.set_yticks([])\n",
     "    ax.imshow(make_grid(denorm(images.detach()[:nmax]), nrow=8).permute(1, 2, 0))\n",
     "\n",
-    "use_colab = False\n",
     "#TODO: define your own dataset address\"\n",
     "if use_colab:\n",
     "    CURRENT_PATH = '/content/drive/My Drive/OuluProject/'\n",
@@ -704,6 +694,7 @@
     "losses_d = []\n",
     "real_scores = []\n",
     "fake_scores = []\n",
+    "\n",
     "if use_colab:\n",
     "    checkpoint_dir = CURRENT_PATH + 'checkpoint'\n",
     "else:\n",
@@ -885,10 +876,6 @@
     "#losses_d = []\n",
     "#real_scores = []\n",
     "#fake_scores = []\n",
-    "if use_colab:\n",
-    "    checkpoint_dir = CURRENT_PATH + 'checkpoint'\n",
-    "else:\n",
-    "    checkpoint_dir = 'checkpoint'\n",
     "\n",
     "def train(D, G, d_optimizer, g_optimizer, epochs=1):\n",
     "    iter_count = 0\n",
